# test-github-assignment-higher-fri-rahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

./: network_log.har  readme.md  video.py
Courseworks Databases/SQA-19-Coursework-Database-Flights/: database.db  main.sql
Courseworks Databases/SQA-20-Coursework-Database-Cars/: database.db  main.sql
Courseworks Databases/SQA-22-Coursework-Database-Routes/: database.db  main.sql
Courseworks Databases/SQA-23-Coursework-Database-Gnomes/: database.db  main.sql
Courseworks Databases/SQA-24-Coursework-Database-Swimming/: database.db  main.sql
Courseworks Databases/SQA-Sample-Coursework-Database/: database.db  main.sql
Courswork 2025/coursework-2025/: database.db  main.sql  pyproject.toml
Courswork 2025/coursework-2025/setup/: CharacterInfo.txt  Comic.txt  ComicCharacter.txt  Publisher.txt  Series.txt
Database - Database Test/: database.db  main.sql
Database - Database Test/setup/: setup.sql
Database - Mock Test/: database.db  main.sql
Photography/: database.db  main.sql  urls.txt
Photography/(A) Solutions/: 2C.sql  2a.sql  2b.sql
Photography/setup/: main.py  setup.sql
Spotify/: advanced selects.sql  basic selects.sql  database.db  delete insert update.sql  grouping.sql  joining.sql  main.sql
dataflow/: 2022sotfwaredesigndevelop.py  2023softwaredevelope.py  Fun_Users.csv  extrahobbies.py  hobbies.py  recordpartb.py  records.py  service.csv
software/: games.csv  gamesExtended.csv  mammalthingy.py  platform_suitable_games.txt  testbutmakeitrecords.py  testthng.py
software/parallel arrays/: 2022sotfwaredesigndevelop.py  2023softwaredevelope.py  (+4 more)
(+44 files in other folders)
