[tool.poetry]
name = "coursework-2025"
version = "0.1.0"
description = "A project to set up and interact with an SQL database"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "coursework_2025"}]  # Add this line

[tool.poetry.dependencies]
python = "^3.9"
prettytable = "*"

[tool.poetry.scripts]
runproject = "setup.main:main"  # Make sure setup/main.py exists

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
